# HoneyAgentBench

./: .env.example  .gitignore  DEVELOPMENT_SPEC.md  README.md  pyproject.toml  task.md
docs/: README.md  architecture.md  development_log.md  enterprise_v3_plan.md  experiment_log.md  experiment_plan.md  metric_definitions.md  model_configs.md  phase1_to4_implementation.md  pilot_report.md  pilot_results.md  project_overview.md  safety_boundary.md  topology.md
docs/decisions/: 0001-use-restricted-tools.md  0002-use-static-honeypot-first.md
docs/results/: 2026-05-19-deepseek-v4-pro.md  2026-05-19-multinode-difficulty-v1.md  2026-05-19-multinode-mvp.md  2026-05-20-enterprise-v2-minimal-path.md  2026-05-20-enterprise-v2-path-planning-constraint.md  2026-05-20-enterprise-v2-path-planning-pro.md  2026-05-20-enterprise-v2-strict-prompt-flash.md  2026-05-20-enterprise-v2-strict-prompt-optimization.md  2026-05-20-enterprise-v2-strict-success.md  (+5 more)
docs/runbooks/: run_deepseek.md  (+3 more)
evals/: multinode_enterprise_v3_seed_manifest.json
honeyagentbench/: __init__.py  constants.py  event_utils.py  scenarios.py  schemas.py  scorer_cli.py  scorers.py  tasks.py  tools.py
scripts/: aggregate_results.py  generate_v3_scenarios.py  run_deepseek.sh  run_model_suite.sh  run_mvp.sh  run_newapi.sh  run_repeated.sh  run_verify.sh  write_run_manifest.py
tests/: test_aggregate_results.py  test_docker_compose_security.py  test_event_utils.py  test_policy_constants.py  test_run_manifest.py  test_scenarios.py  test_schemas.py  test_scorer_logic.py  test_seed_generation.py  test_tool_scoping.py
(+338 files in other folders)
