[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HoneyAgentBench"
version = "0.1.0"
description = "A safe pilot benchmark for LLM agents interacting with static honeypot deception environments."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "HoneyAgentBench contributors" }]
dependencies = [
  "inspect-ai>=0.3.0",
  "inspect-cyber>=0.1.0",
  "pydantic>=2.6",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "openai>=1.0",
  "rich>=13.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["honeyagentbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
